# cr8s-fe

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.fe-server  Dockerfile.server  Dockerlogin.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: backend-version.txt  dev-container-usage.md  manual-e2e-tests.md
scripts/: quickstart.sh  shutdown.sh
src/: contexts.rs  hooks.rs  main.rs
src/api/: crates.rs  mod.rs  rustaceans.rs  user.rs
src/components/: alert.rs  button.rs  crate_form.rs  crate_list.rs  header.rs  login_form.rs  mod.rs  rustacean_form.rs  rustacean_list.rs  select.rs  sidebar.rs  textarea.rs
src/pages/: home.rs  login.rs  mod.rs  not_found.rs
src/pages/crates/: add.rs  delete.rs  edit.rs  index.rs
src/pages/rustaceans/: add.rs  delete.rs  edit.rs  index.rs
tests/playwright/: crates.spec.ts  login.spec.ts  rustaceans.spec.ts
tests/playwright/utils/: auth.ts
