[package]
name = "cr8s-fe"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
yew         = { version = "0.21", features = ["csr"] }
yew-router  = "0.18"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
gloo-console = "0.2"
gloo-net = "0.2"
gloo-storage = "0.2"
serde = "1.0"
serde_json = "1.0"
indexmap = { version = "1.9.3", features = ["serde"] }

#-Logging
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
#-

[workspace]
members = [
    ".",        # cr8s-fe frontend app
    "cli"       # quickstart CLI tool
]
